--- a/frontend/usuarios.html
+++ b/frontend/usuarios.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styleUsers.css">
+    <script defer src="scriptUsers.js"></script>
+
     <title>Usuarios</title>
 </head>
 <body>
-    
+    <h2>Lista de usuários</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody id="tabela">
+            <tr>
+                <!-- Gerado dinamicamente no javascript -->
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
