Backend - function for button 'editar'

--- a/frontend/usuarios.html
+++ b/frontend/usuarios.html
@@ -13,6 +13,8 @@
 <body>
     <h2>Lista de usuários</h2>
 
+    <button class="btn-voltar" onclick="voltar()">Voltar para Cadastro</button>
+
     <table>
         <thead>
             <tr>
